lib/src/bindings.dart


  /// Sets the prefilter of signal \p edfsignal e.g. "HP:0.1Hz", "LP:75Hz N:50Hz", etc.<br>
  /// This function is optional and can be called only after opening a file in writemode and<br>
  /// before the first sample write action.
  ///
  /// @param[in] handle
  /// File handle.
  ///
  /// @param[in] edfsignal
  /// The zero-based index of the signal.
  ///
  /// @param[in] prefilter
  /// A pointer to a NULL-terminated ASCII-string containing the prefilter text of the signal \p edfsignal.
  ///
  /// @return
  /// 0 on success, otherwise -1.<br>
  int set_prefilter(
    int handle,
    int edfsignal,
    ffi.Pointer<ffi.Char> prefilter,
  ) {
    return _set_prefilter(
      handle,
      edfsignal,
      prefilter,
    );
  }

  late final _set_prefilterPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Int, ffi.Int, ffi.Pointer<ffi.Char>)>>('edf_set_prefilter');
  late final _set_prefilter = _set_prefilterPtr
      .asFunction<int Function(int, int, ffi.Pointer<ffi.Char>)>();

  /// Sets the transducer of signal \p edfsignal e.g. "AgAgCl cup electrodes", etc.<br>
  /// This function is optional and can be called only after opening a file in writemode and<br>
  /// before the first sample write action.
  ///
  /// @param[in] handle
  /// File handle.
  ///
  /// @param[in] edfsignal
  /// The zero-based index of the signal.
  ///
  /// @param[in] transducer
  /// A pointer to a NULL-terminated ASCII-string containing the transducer text of the signal \p edfsignal.
  ///
  /// @return
  /// 0 on success, otherwise -1.<br>
  int set_transducer(
    int handle,
    int edfsignal,
    ffi.Pointer<ffi.Char> transducer,
  ) {
    return _set_transducer(
      handle,
      edfsignal,
      transducer,
    );
  }

  late final _set_transducerPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Int, ffi.Int, ffi.Pointer<ffi.Char>)>>('edf_set_transducer');
  late final _set_transducer = _set_transducerPtr
      .asFunction<int Function(int, int, ffi.Pointer<ffi.Char>)>();

  /// Sets the physical dimension (unit) of signal \p edfsignal. ("uV", "BPM", "mA", "Degr.", etc.).<br>
  /// This function is recommended for every signal when you want to write a file<br>
  /// and can be called only after opening a file in write mode and before the first sample write action.<br>
  ///
  /// @param[in] handle
  /// File handle.
  ///
  /// @param[in] edfsignal
  /// The zero-based index of the signal.
  ///
  /// @param[in] phys_dim
  /// A pointer to a NULL-terminated ASCII-string containing the physical dimension (unit) of the signal \p edfsignal.
  ///
  /// @return
  /// 0 on success, otherwise -1.<br>
  int set_physical_dimension(
    int handle,
    int edfsignal,
    ffi.Pointer<ffi.Char> phys_dim,
  ) {
    return _set_physical_dimension(
      handle,
      edfsignal,
      phys_dim,
    );
  }

  late final _set_physical_dimensionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Int, ffi.Int,
              ffi.Pointer<ffi.Char>)>>('edf_set_physical_dimension');
  late final _set_physical_dimension = _set_physical_dimensionPtr
      .asFunction<int Function(int, int, ffi.Pointer<ffi.Char>)>();

  /// Sets the startdate and starttime.<br>
  /// If not called, the library will use the system date and time at runtime.<br>
  /// This function is optional and can be called only after opening a file in write mode<br>
  /// and before the first sample write action.<br>
  /// Note: for anonymization purposes, the consensus is to use 1985-01-01 00:00:00 for the startdate and starttime.
  ///
  /// @param[in] handle
  /// File handle.
  ///
  /// @param[in] startdate_year
  /// 1985 - 2084 inclusive
  ///
  /// @param[in] startdate_month
  /// 1 - 12 inclusive
  ///
  /// @param[in] startdate_day
  /// 1 - 31 inclusive
  ///
  /// @param[in] starttime_hour
  /// 0 - 23 inclusive
  ///
  /// @param[in] starttime_minute
  /// 0 - 59 inclusive
  ///
  /// @param[in] starttime_second
  /// 0 - 59 inclusive
  ///
  /// @return
  /// 0 on success, otherwise -1.<br>
  int set_startdatetime(
    int handle,
    int startdate_year,
    int startdate_month,
    int startdate_day,
    int starttime_hour,
    int starttime_minute,
    int starttime_second,
  ) {
    return _set_startdatetime(
      handle,
      startdate_year,
      startdate_month,
      startdate_day,
      starttime_hour,
      starttime_minute,
      starttime_second,
    );
  }

  late final _set_startdatetimePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Int, ffi.Int, ffi.Int, ffi.Int, ffi.Int, ffi.Int,
              ffi.Int)>>('edf_set_startdatetime');
  late final _set_startdatetime = _set_startdatetimePtr
      .asFunction<int Function(int, int, int, int, int, int, int)>();

  /// Sets the subject name<br>
  /// This function is optional and can be called only after opening a file in writemode and<br>
  /// before the first sample write action.
  ///
  /// @param[in] handle
  /// File handle.
  ///
  /// @param[in] patientname
  /// A pointer to a NULL-terminated ASCII-string containing the subject name.
  ///
  /// @return
  /// 0 on success, otherwise -1.<br>
  int set_patientname(
    int handle,
    ffi.Pointer<ffi.Char> patientname,
  ) {
    return _set_patientname(
      handle,
      patientname,
    );
  }

  late final _set_patientnamePtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Pointer<ffi.Char>)>>(
      'edf_set_patientname');
  late final _set_patientname = _set_patientnamePtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Char>)>();

  /// Sets the subject code<br>
  /// This function is optional and can be called only after opening a file in writemode and<br>
  /// before the first sample write action.
  ///
  /// @param[in] handle
  /// File handle.
  ///
  /// @param[in] patientcode
  /// A pointer to a NULL-terminated ASCII-string containing the subject code.
  ///
  /// @return
  /// 0 on success, otherwise -1.<br>
  int set_patientcode(
    int handle,
    ffi.Pointer<ffi.Char> patientcode,
  ) {
    return _set_patientcode(
      handle,
      patientcode,
    );
  }

  late final _set_patientcodePtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Pointer<ffi.Char>)>>(
      'edf_set_patientcode');
  late final _set_patientcode = _set_patientcodePtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Char>)>();

  /// Sets the sex of the subject. 1 is male, 0 is female.<br>
  /// This function is optional and can be called only after opening a file in writemode<br>
  /// and before the first sample write action.<br>
  ///
  /// @param[in] handle
  /// File handle.
  ///
  /// @param[in] sex
  /// 1: male, 0: female.
  ///
  /// @return
  /// 0 on success, otherwise -1.<br>
  int set_sex(
    int handle,
    int sex,
  ) {
    return _set_sex(
      handle,
      sex,
    );
  }

  late final _set_sexPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>(
          'edf_set_sex');
  late final _set_sex = _set_sexPtr.asFunction<int Function(int, int)>();

  int set_gender(
    int handle,
    int sex,
  ) {
    return _set_gender(
      handle,
      sex,
    );
  }

  late final _set_genderPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>(
          'edf_set_gender');
  late final _set_gender = _set_genderPtr.asFunction<int Function(int, int)>();

  /// Sets the subject birthdate.<br>
  /// This function is optional and can be called only after opening a file in write mode<br>
  /// and before the first sample write action.<br>
  ///
  /// @param[in] handle
  /// File handle.
  ///
  /// @param[in] birthdate_year
  /// 1800 - 3000 inclusive
  ///
  /// @param[in] birthdate_month
  /// 1 - 12 inclusive
  ///
  /// @param[in] birthdate_day
  /// 1 - 31 inclusive
  ///
  /// @return
  /// 0 on success, otherwise -1.<br>
  int set_birthdate(
    int handle,
    int birthdate_year,
    int birthdate_month,
    int birthdate_day,
  ) {
    return _set_birthdate(
      handle,
      birthdate_year,
      birthdate_month,
      birthdate_day,
    );
  }

  late final _set_birthdatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Int, ffi.Int, ffi.Int, ffi.Int)>>('edf_set_birthdate');
  late final _set_birthdate =
      _set_birthdatePtr.asFunction<int Function(int, int, int, int)>();

  /// Sets the additional subject info<br>
  /// This function is optional and can be called only after opening a file in writemode and<br>
  /// before the first sample write action.
  ///
  /// @param[in] handle
  /// File handle.
  ///
  /// @param[in] patient_additional
  /// A pointer to a NULL-terminated ASCII-string containing the additional subject info.
  ///
  /// @return
  /// 0 on success, otherwise -1.<br>
  int set_patient_additional(
    int handle,
    ffi.Pointer<ffi.Char> patient_additional,
  ) {
    return _set_patient_additional(
      handle,
      patient_additional,
    );
  }

  late final _set_patient_additionalPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Pointer<ffi.Char>)>>(
      'edf_set_patient_additional');
  late final _set_patient_additional = _set_patient_additionalPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Char>)>();

  /// Sets the administration code<br>
  /// This function is optional and can be called only after opening a file in writemode and<br>
  /// before the first sample write action.
  ///
  /// @param[in] handle
  /// File handle.
  ///
  /// @param[in] admincode
  /// A pointer to a NULL-terminated ASCII-string containing the administration code.
  ///
  /// @return
  /// 0 on success, otherwise -1.<br>
  int set_admincode(
    int handle,
    ffi.Pointer<ffi.Char> admincode,
  ) {
    return _set_admincode(
      handle,
      admincode,
    );
  }

  late final _set_admincodePtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Pointer<ffi.Char>)>>(
      'edf_set_admincode');
  late final _set_admincode =
      _set_admincodePtr.asFunction<int Function(int, ffi.Pointer<ffi.Char>)>();

  /// Sets the technicians name or code<br>
  /// This function is optional and can be called only after opening a file in writemode and<br>
  /// before the first sample write action.
  ///
  /// @param[in] handle
  /// File handle.
  ///
  /// @param[in] technician
  /// A pointer to a NULL-terminated ASCII-string containing the technicians name or code.
  ///
  /// @return
  /// 0 on success, otherwise -1.<br>
  int set_technician(
    int handle,
    ffi.Pointer<ffi.Char> technician,
  ) {
    return _set_technician(
      handle,
      technician,
    );
  }

  late final _set_technicianPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Pointer<ffi.Char>)>>(
      'edf_set_technician');
  late final _set_technician =
      _set_technicianPtr.asFunction<int Function(int, ffi.Pointer<ffi.Char>)>();

  /// Sets the equipment brand and/or model<br>
  /// This function is optional and can be called only after opening a file in writemode and<br>
  /// before the first sample write action.
  ///
  /// @param[in] handle
  /// File handle.
  ///
  /// @param[in] equipment
  /// A pointer to a NULL-terminated ASCII-string containing the equipment brand and/or model<br>
  /// used for the recording.
  ///
  /// @return
  /// 0 on success, otherwise -1.<br>
  int set_equipment(
    int handle,
    ffi.Pointer<ffi.Char> equipment,
  ) {
    return _set_equipment(
      handle,
      equipment,
    );
  }

  late final _set_equipmentPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Pointer<ffi.Char>)>>(
      'edf_set_equipment');
  late final _set_equipment =
      _set_equipmentPtr.asFunction<int Function(int, ffi.Pointer<ffi.Char>)>();
